# sweep

./: .gitignore  AGENT.md  LICENSE  Makefile  README.md  pyproject.toml  sweep-gtk.spec
.github/workflows/: ci.yml
data/: io.github.BlueManCZ.sweep.desktop  io.github.BlueManCZ.sweep.policy  io.github.BlueManCZ.sweep.service
plugins/example_plugin/: plugin.py
src/sweep/: __init__.py  __main__.py  cli.py  dbus_service.py  settings.py  storage.py  utils.py
src/sweep/core/: engine.py  plugin_loader.py  privileges.py  registry.py  tracker.py
src/sweep/models/: __init__.py  clean_result.py  plugin.py  scan_result.py
src/sweep/plugins/: apt_cache.py  bitwig_cache.py  browser_cache.py  copilot_cache.py  coredumps.py  darktable_cache.py  dnf_cache.py  download_duplicates.py  e2e_testing_cache.py  electron_cache.py  expo_cache.py  extracted_archives.py  flatpak_cache.py  google_cache.py  gpu_cache.py  jetbrains_cache.py  journal_logs.py  jvm_cache.py  login_records.py  mail_cache.py  node_cache.py  old_app_logs.py  old_kernels.py  pacman_cache.py  portage_cache.py  python_cache.py  rotated_logs.py  rust_cache.py  snap_cache.py  spotify_cache.py  strawberry_cache.py  thumbnails.py  tmp_files.py  tracker_cache.py  trash.py  unity_cache.py  user_cache.py  wine_cache.py  (+1 more)
src/sweep_gtk/: __init__.py  __main__.py  app.py  constants.py  dbus_client.py  dialogs.py  window.py
tests/: conftest.py  test_engine.py  test_group_plugin.py  test_old_kernels.py  test_plugin_loader.py  test_plugins.py  test_portage_depclean.py  test_privileges.py  test_python_cache.py  test_tracker.py
(+13 files in other folders)
